@@ -1,3 +1,11 @@
+2004-10-29  Jay Rossiter <cryptographite@users.sf.net>  1.5-cvs-b258
+
+	* Fix 971760: Clear autorotate flag after rotating
+
+	* Change:  Correct the 'canViewFull' behavior - we were 
+	  allowing users to see the full image if there was no resized
+	  available, however this was not the original intent.
+
 2004-10-29  Jay Rossiter <cryptographite@users.sf.net>  1.5-cvs-b257
 
 	* Fix 1055656: Return array() instead of NULL
